# CONTIED-AI

./: .gitignore  Dockerfile  main.py  manage.py  okt_test.py  pyproject.toml  requirements.txt
app/: config.py  main.py  models.py  services.py
app/cache/: word2vec.model
app/data/: data.csv  data_for_supabase.csv
conti_recommendation/: __init__.py  apps.py  serializers.py  services.py  urls.py  views.py
conti_recommendation/cache/: processed_lyrics.pkl  tfidf_vectorizer.pkl  tfidf_vectors.npz
conti_recommendation/data/: bible.txt
contiedai/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_services.py
